Add ElasticClient API and Spark integration test